Fixed some minor bugs on purchases related to filter advanced overlapping navigation buttons

--- a/app/assets/stylesheets/purchases.css.scss
+++ b/app/assets/stylesheets/purchases.css.scss
@@ -71,66 +71,6 @@
         display: inline-block;
       }
     }
-
-    .advanced_filter_box {
-      position: fixed;
-
-      .content {
-        position: fixed;
-        top: 116px;
-        right: 193px;
-        border-radius: 5px;
-        box-shadow: 2px 2px 15px $dk_grey;
-        background-color: $white;
-        width: 320px;
-        text-align: left;
-        z-index: 50;
-
-        dl {
-          padding-bottom: 5px;
-          padding-left: 15px;
-          padding-right: 15px;
-          dt {
-            display: inline-block;
-            padding-top: 5px;
-          }
-          dd {
-            display: inline-block;
-            float: right;
-          }
-        }
-
-        h2 {
-          color: $dk_grey;
-          padding-left: 15px;
-          padding-right: 15px;
-          margin-top: 10px;
-          margin-bottom: 5px;
-          border-bottom: 1px solid $dk_grey;
-        }
-        .dayButtons {
-          padding-bottom: 15px;
-          padding-left: 15px;
-          padding-right: 15px;
-
-          .dayButton {
-            padding-top: 5px;
-            text-align: center;
-          }
-        }
-
-        .clear_filters {
-          text-align: center;
-          padding-top: 10px;
-        }
-
-        .submit {
-          text-align: center;
-          padding-top: 15px;
-          padding-bottom: 15px;
-        }
-      }
-    }
   }
 
   .purchases_list {
@@ -147,7 +87,6 @@
       tr {
         td {
           padding-top: 15px;
-          text-align: center;
           overflow: hidden;
           -webkit-touch-callout: none;
           -webkit-user-select: none;
@@ -168,7 +107,12 @@
             margin-right: -10px;
           }
         }
-
+        .buyer_cell_header {
+          text-align: center;
+        }
+        .date_cell_header {
+          text-align: center;
+        }
         i { color: $grey; }
 
         .sorted {
@@ -241,6 +185,66 @@
 
       &:hover {
         background-color: $hover_green_lt
+      }
+    }
+  }
+
+  .advanced_filter_box {
+    position: fixed;
+    z-index: 60;
+
+    .content {
+      position: fixed;
+      top: 116px;
+      right: 193px;
+      border-radius: 5px;
+      box-shadow: 2px 2px 15px $dk_grey;
+      background-color: $white;
+      width: 320px;
+      text-align: left;
+
+      dl {
+        padding-bottom: 5px;
+        padding-left: 15px;
+        padding-right: 15px;
+        dt {
+          display: inline-block;
+          padding-top: 5px;
+        }
+        dd {
+          display: inline-block;
+          float: right;
+        }
+      }
+
+      h2 {
+        color: $dk_grey;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-top: 10px;
+        margin-bottom: 5px;
+        border-bottom: 1px solid $dk_grey;
+      }
+      .dayButtons {
+        padding-bottom: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+
+        .dayButton {
+          padding-top: 5px;
+          text-align: center;
+        }
+      }
+
+      .clear_filters {
+        text-align: center;
+        padding-top: 10px;
+      }
+
+      .submit {
+        text-align: center;
+        padding-top: 15px;
+        padding-bottom: 15px;
       }
     }
   }
